fixed jumping dialog navi-556

--- a/src/app/report/graphical-report.css
+++ b/src/app/report/graphical-report.css
@@ -7,6 +7,10 @@
   height: 80px;
 }
 
+.processingDialog .ui-dialog-content {
+  min-height: 130px;
+}
+
 /* Landscape phones and down */
 @media (max-width: 480px) {
   .processingDialog {
